src/layouts/index.css
.wallpaper {
  z-index: -1;
  position: fixed;
  width: 100vw;
  height: 100vh;
  background-image: url(../images/stars.png);
  background-size: 500px;
  background-attachment: fixed;
  background-position: bottom;
  background-repeat: repeat;
  bottom: 0;
  left: 0;
  display: flex;
  justify-content: center;
}

.background {
  width: 100vw;
  height: 100vh;
  position: fixed;
  z-index: -1;
  max-width: 1080px;
  max-height: 900px;
  bottom: 0;
}

.background .rocket-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 180px;
  height: 245px;
  position: absolute;
  right: 25%;
  bottom: 128px;
  -webkit-transform: translateX(50%);
  -moz-transform: translateX(50%);
  transform: translateX(50%);
}

.background .earth-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100px;
  height: 100px;
  position: absolute;
  right: 25%;
  bottom: 64px;
}

@media screen and (min-height: 901px) {
  .background {
    bottom: initial;
  }
}

